cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)

project(MessageClientUI)

#====================================================================
add_subdirectory(MessageClientUI_QtSimple) # 
add_subdirectory(MessageClientUI_QtSsl) # 
#====================================================================
