cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)

project(MessageServer)

#====================================================================
add_subdirectory(MessageServer_QtSimple) # 
add_subdirectory(MessageServer_QtSsl) # 
#====================================================================
